--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,8 +19,8 @@ en:
       visit_page: "For more online shopping, visit %{url}"
     captcha:
       captcha_settings: "Captcha Settings"
-      public_key: "Public key"
-      private_key: "Private key"
+      site_key: "Site key"
+      secret_key: "Secret key"
       manage_keys: "Manage your (re)captcha keys"
       use_captcha: "Use Captcha?"
       theme: "Theme"
