--- a/config/locales/sl.yml
+++ b/config/locales/sl.yml
@@ -19,8 +19,8 @@ sl:
       visit_page: "Za več spletno nakupovanje, obisk %{url}"
     captcha:
       captcha_settings: "CAPTCHA nastavitve"
-      public_key: "Javni ključ"
-      private_key: "Zasebni ključ"
+      site_key: "Javni ključ"
+      secret_key: "Zasebni ključ"
       manage_keys: "Uredi svoje (re)captcha ključe"
       use_captcha: "Uporabi CAPTCHA zaščito?"
       theme: "Tema"
